--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body {
-    font-family: "Open Sans" sans-serif;
+    font-family: "Open Sans", sans-serif;
 }
 
 h1, h2, h3 {
@@ -19,15 +19,19 @@ footer {
     padding: 20px 0;
 }
 
-.jumbotron {
+header {
     padding: 48px;
     background-image: linear-gradient(to right, #5637DD, #3046C5, #60106B);
     color: white;
 }
 
 .row-content {
-    padding: 50px 0;
+    padding: 50px 10px;
     border-bottom: 1px ridge;
     min-height: 200px;
+}
+
+.navbar {
+    background-color: #901CAD;
 }
 
