NPM Scripts Part 1

--- a/css/styles.css
+++ b/css/styles.css
@@ -62,4 +62,28 @@ header {
   background-color: rgba(0, 0, 0, 0.5);
 }
 
+#reserveModal .modal-header {
+  background-color: #17A2B8;
+  color: white;
+}
+
+#loginModal .modal-header {
+  background-color: #901CAD;
+  color: white;
+}
+
+.review-section {
+  background: beige;
+}
+
+.campsite-btn {
+  background: #0dcaf0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0.5rem 1rem;
+  border-radius: 0.5rem;
+  width: 60%;
+}
+
 /*# sourceMappingURL=styles.css.map */
